Adds last journal entry generator for financial years

--- a/app/views/assets/_form.html.haml
+++ b/app/views/assets/_form.html.haml
@@ -21,4 +21,5 @@
 =formalize do |f|
   -f.title :accountancy
   -f.field :asset, :journal_id, :choices=>{:reflection=>:journals}, :new=>true
-  -f.field :asset, :account_id, :choices=>:account, :new=>true
+  -f.field :asset, :allocation_account_id, :choices=>:account, :new=>true
+  -f.field :asset, :charges_account_id, :choices=>:account, :new=>true
