--- a/app/views/assets/show.html.haml
+++ b/app/views/assets/show.html.haml
@@ -6,7 +6,7 @@
   -l.attribute :name
   -l.attribute :depreciation_method
   -l.attribute :depreciable_amount, :currency => true
-  -l.attribute :depreciated_amount, :currency => true
+  -# l.attribute :depreciated_amount, :currency => true
   -l.attribute :depreciation_percentage
   -l.attribute :started_on
   -l.attribute :stopped_on
