--- a/app/views/financial_years/show.html.haml
+++ b/app/views/financial_years/show.html.haml
@@ -1,5 +1,8 @@
 =toolbar do |t|
   -t.compute_balances @financial_year, :method=>:post
+  -attrs = {}
+  -attrs["data-confirm"] = "labels.are_you_sure".t if @financial_year.last_journal_entry
+  -t.generate_last_journal_entry @financial_year, attrs
   -t.print_balance_sheet @financial_year
   -t.print_income_statement @financial_year
   -if @financial_year == @current_company.closable_financial_year
@@ -11,6 +14,7 @@
   -l.attribute :stopped_on
   -l.attribute :closed
   -l.attribute :code
+  -l.attribute :last_journal_entry, :url => true
 
 =tabbox(:financial_year) do |tb|
   -tb.tab(@financial_year.closed ? :balance : :last_computed_balance) do
