--- a/app/views/journal_entries/show.html.haml
+++ b/app/views/journal_entries/show.html.haml
@@ -1,6 +1,7 @@
 =journals_tag
 =toolbar do |t|
-  -t.edit @journal_entry unless @journal_entry.closed?
+  -t.edit @journal_entry if @journal_entry.updateable?
+  -t.destroy @journal_entry, :method => :delete, "data-confirm" => tg(:are_you_sure) if @journal_entry.destroyable?
 
 =attributes_list(@journal_entry) do |l|
   -l.attribute :number
