--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -21,7 +21,7 @@
         #main
           #header
             #tb.toolbar=yield :toolbar
-            %h1.title=controller.human_action_name
+            %h1#title=controller.human_action_name
           #content
             =notifications_tag
             =yield
