Renames icons (blue, green black) to prevent production error due to their confusing names.

--- a/app/views/layouts/_top.html.haml
+++ b/app/views/layouts/_top.html.haml
@@ -27,7 +27,7 @@
               %span.text=tl("menus.#{menu}")
             %ul
               -for submenu, items in submenus
-                %li.submenu.mn.blue
+                %li.submenu.mn.rblue
                   =link_to(items[0][:url]) do
                     %span.icon
                     %span.text=tl("menus.submenus.#{submenu}")
